<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_header_general">

        <Preference
            app:iconSpaceReserved="false"
            app:key="permissions"
            app:persistent="false"
            app:summary="@string/pref_permissions_missing_desc"
            app:title="@string/pref_permissions_name" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="output_dir"
            app:persistent="false"
            app:summary="@string/pref_output_dir_desc"
            app:title="@string/pref_output_dir_name" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="output_format"
            app:persistent="false"
            app:summary="@string/pref_output_format_desc"
            app:title="@string/pref_output_format_name" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_header_advanced">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="inhibit_batt_opt"
            app:persistent="false"
            app:summary="@string/pref_inhibit_batt_opt_desc"
            app:title="@string/pref_inhibit_batt_opt_name" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="native_sample_rate"
            app:persistent="false"
            app:summary="@string/pref_native_sample_rate_desc"
            app:title="@string/pref_native_sample_rate_name" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="debug_mode"
            app:persistent="false"
            app:summary="@string/pref_debug_mode_desc"
            app:title="@string/pref_debug_mode_name" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_header_about">

        <Preference
            app:iconSpaceReserved="false"
            app:key="version"
            app:persistent="false"
            app:title="@string/pref_version_name" />
    </PreferenceCategory>
</PreferenceScreen>
